# texteditor

./: .gitignore  README.md  file.txt  meson.build
src/: main.cpp
subprojects/: fmt.wrap
